--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,14 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@rainbow-me/rainbowkit": "^2.2.5",
-    "@tanstack/react-query": "^5.77.2",
-    "ethers": "^6.14.3",
+    "ethers": "6.6.2",
     "next": "15.3.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "viem": "2.x",
-    "wagmi": "^2.15.4"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
